# fast_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  project.env  pyproject.toml  restart_docker.sh  start_server.sh  tox.ini
.github/workflows/: python-app.yml
app/: __init__.py  config.py  database.py  main.py  oauth2.py
app/dependency/: __init__.py  user.py
app/router/: __init__.py  auth.py  burn.py  burns.py  journal.py  logbook.py  sleep.py  user.py
app/schema/: __init__.py  burn.py  db_object.py  delete_message.py  journal.py  logbook.py  sleep.py  token.py  user.py
tasks/: __init__.py  shell_init.py  superuser.py
tests/: burn_example.json  conftest.py  test.env  test_burn.json  test_burn_items.json  test_data.json  test_data_old.json  test_logbook.json  test_sleep.json  test_sleep_items.json  utils.py
tests/fixture/: client.py  db.py  test_data.py
tests/test_routes/: test_burn.py  test_journal.py  test_logbook.py  test_sleep.py  test_user.py
