[tool.poetry]
name = "oculo-fast-api"
version = "0.1.0"
description = ""
authors = ["denys <denysburimov@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pymongo = "^4.3.3"
email-validator = "^2.0.0.post2"
python-dotenv = "^1.0.0"
invoke = "^2.1.1"
ipython = "^8.13.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
pytz = "^2023.3"
boto3 = "^1.26.160"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
httpx = "^0.24.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
